--- a/index.html
+++ b/index.html
@@ -64,18 +64,6 @@
     <div class="swiper-slide">
       <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
     </div>
-    <div class="swiper-slide">
-      <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-    </div>
-    <div class="swiper-slide">
-      <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-    </div>
-    <div class="swiper-slide">
-      <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-    </div>
-    <div class="swiper-slide">
-      <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-    </div>
   </div>
   <div class="swiper-pagination"></div>
 </div>
@@ -86,6 +74,7 @@
 <!-- Initialize Swiper -->
 <script>
   const swiper = new Swiper('.mySwiper', {
+    loop: true,
     effect: 'coverflow',
     grabCursor: true,
     centeredSlides: true,
